--- a/themes/mc-server-theme-amp/assets/scss/_utilities.scss
+++ b/themes/mc-server-theme-amp/assets/scss/_utilities.scss
@@ -17,6 +17,9 @@
 @media (min-width: 768px) {
   .flex-direction-md-row { flex-direction: row; }
 }
+@media (min-width: 992px) { 
+  .flex-direction-lg-row { flex-direction: row; }
+}
 
 .align-items-center { align-items: center; }
 .align-items-stretch { align-items: stretch; }
@@ -25,6 +28,10 @@
 .justify-content-space-between { justify-content: space-between; }
 .justify-content-space-around { justify-content: space-around; }
 
+@media (min-width: 1200px) { 
+  .justify-content-xl-center { justify-content: center; }
+}
+
 .justify-self-center { justify-self: center; }
 .justify-self-flex-start { justify-self: flex-start; }
 
@@ -32,7 +39,11 @@
 
 .margin-16 { margin: 16px; }
 
+.margin-bottom-16 { margin-bottom: 16px; }
 .margin-bottom-24 { margin-bottom: 24px; }
+.margin-bottom-32 { margin-bottom: 32px; }
+
+.margin-left-16 { margin-left: 16px; }
 
 .margin-right-16 { margin-right: 16px; }
 .margin-right-64 { margin-right: 64px; }
@@ -41,6 +52,7 @@
 .margin-x-16 { margin-left: 16px; margin-right: 16px; }
 
 .margin-y-8 { margin-top: 8px; margin-bottom: 8px; }
+.margin-y-16 { margin-top: 16px; margin-bottom: 16px; }
 .margin-y-32 { margin-top: 32px; margin-bottom: 32px; }
 
 .padding-16 { padding: 16px; }
@@ -50,6 +62,7 @@
 
 .padding-left-8 { padding-left: 8px; }
 
+.padding-top-16 { padding-top: 16px; }
 .padding-top-32 { padding-top: 32px; }
 .padding-top-64 { padding-top: 64px; }
 
