--- a/themes/mc-server-theme-amp/assets/scss/sections/_features.scss
+++ b/themes/mc-server-theme-amp/assets/scss/sections/_features.scss
@@ -3,12 +3,30 @@
   width: 100%;
   padding-top: 100%;
 
-  .features-card-body {
+}
+
+.card-link {
+  position: relative;
+  cursor: pointer;
+
+  .card-popup {
     position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+
+    background-color: #121212;
+    border: 1px solid #707070;
+    border-radius: 8px;
+    z-index: 1;
+
+    opacity: 0;
+    visibility: hidden;
+  }
+
+  &:hover {
+    .card-popup {
+      opacity: 1;
+      visibility: visible;
+      transition: opacity 500ms;
+    }
   }
 }
 
