--- a/themes/mc-server-theme-amp/layouts/partials/section/plans-premade-what-you-get.html
+++ b/themes/mc-server-theme-amp/layouts/partials/section/plans-premade-what-you-get.html
@@ -5,15 +5,15 @@
         What you get with your purchase:
       </h1>
     </div>
-    <div class="row padding-top-64 justify-content-space-around">
+    <div class="row justify-content-space-around">
       <div class="column-12 column-md-6 padding-y-32">
         <div class="padding-16">
           <amp-img
             class=""
-            alt="Minecraft Screenshot"
-            src="/images/cta-background.png"
-            width="2049"
-            height="1086"
+            alt="{{ .Params.content.whatYouGet.featuredImage.alt }}"
+            src="{{ .Params.content.whatYouGet.featuredImage.src }}"
+            width="{{ .Params.content.whatYouGet.featuredImage.width }}"
+            height="{{ .Params.content.whatYouGet.featuredImage.height }}"
             layout="responsive"
           >
           </amp-img>
@@ -21,18 +21,7 @@
       </div>
       <div class="column-12 column-md-6 padding-y-32">
         <p class="padding-16">
-          - DDR4 2666 ECC Memory<br>
-          - Ryzen 3000 & 5000 series processors<br>
-          - Replicated NVME storage <br>
-          - Simplified WebDAV access point to view all servers at once<br>
-          - DDOS Protection<br>
-          - Disk Snapshotting and Restoration (up to 7 per customer)<br>
-        </p>
-        <p class="padding-16">
-          All servers are routed through our public IP proxy.<br>
-          Bungee servers receive their own public IPv4 address.<br>
-          Bungee servers live on our edge routers for ultra-fast latency.<br>
-          VPS servers receive their own public IPv4 address.<br>
+          {{ .Params.content.whatYouGet.text | safeHTML }}
         </p>
       </div>
     </div>
