--- a/themes/mc-server-theme-amp/assets/scss/main.scss
+++ b/themes/mc-server-theme-amp/assets/scss/main.scss
@@ -8,6 +8,7 @@
 
 @import "sections/hero";
 @import "sections/features";
+@import "sections/accessibility";
 @import "sections/cta";
 
 @import "sections/about";
