--- a/themes/mc-server-theme-amp/layouts/partials/navigation/footer.html
+++ b/themes/mc-server-theme-amp/layouts/partials/navigation/footer.html
@@ -1,3 +1,6 @@
-<footer class="container padding-y-64">
+<footer class="container padding-y-64 text-align-center">
   <div class="footer-line"></div>
+  <div class="padding-top-64">
+    {{ site.Params.footer | safeHTML }}
+  </div>
 </footer>
