--- a/themes/mc-server-theme-amp/assets/scss/_utilities.scss
+++ b/themes/mc-server-theme-amp/assets/scss/_utilities.scss
@@ -27,6 +27,7 @@
 .justify-content-center { justify-content: center; }
 .justify-content-space-between { justify-content: space-between; }
 .justify-content-space-around { justify-content: space-around; }
+.justify-content-flex-end { justify-content: flex-end; }
 
 @media (min-width: 1200px) { 
   .justify-content-xl-center { justify-content: center; }
@@ -50,6 +51,7 @@
 
 .margin-x-8 { margin-left: 8px; margin-right: 8px; }
 .margin-x-16 { margin-left: 16px; margin-right: 16px; }
+.margin-x-32 { margin-left: 32px; margin-right: 32px; }
 
 .margin-y-8 { margin-top: 8px; margin-bottom: 8px; }
 .margin-y-16 { margin-top: 16px; margin-bottom: 16px; }
@@ -141,18 +143,4 @@
 }
 
 .white-space-nowrap { white-space: nowrap; }
-
-.square-container {
-  position: relative;
-  width: 100%;
-  padding-top: 100%;
-
-  .square-content {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-  }
-}
 
