--- a/themes/mc-server-theme-amp/layouts/partials/structure/head.html
+++ b/themes/mc-server-theme-amp/layouts/partials/structure/head.html
@@ -34,6 +34,17 @@
     <link rel="preconnect" href="https://app.snipcart.com">
     <link rel="preconnect" href="https://cdn.snipcart.com">
     <link rel="stylesheet" href="https://cdn.snipcart.com/themes/v3.2.1/default/snipcart.css" />
+
+    <!-- Hero Typewriter Effect -->
+    <!-- Exit Modal -->
+    <meta 
+      name="amp-script-src"
+      content="
+        sha384-V7l3mTRJOGIxrzgBIGh0dRcXuKUZZxKhVHBBVWlcq_VhDhZ7uOnh5GUHObYmPCgU
+        sha384-8a-AdC5CvXn28DPxX5Rt1EKCyTUfrvS-CcrRyWIxhF5No8r1NxzNgZjIVNSAytyG
+      "
+    />
+
 </head>
 
 <body>
