--- a/themes/mc-server-theme-amp/assets/scss/sections/_hero.scss
+++ b/themes/mc-server-theme-amp/assets/scss/sections/_hero.scss
@@ -2,6 +2,7 @@
   display: inline-block;
   position: relative;
   min-height: 350px;
+  max-width: 100%;
 
   // @media (min-width: 768px) { .container-md, .container-sm, .container { max-width: 720px; } }
   // @media (min-width: 992px) { 
