--- a/themes/mc-server-theme-amp/layouts/partials/navigation/footer.html
+++ b/themes/mc-server-theme-amp/layouts/partials/navigation/footer.html
@@ -1,6 +1,44 @@
-<footer class="container padding-y-64 text-align-center">
+<footer class="container">
+  <div class="row justify-content-space-between padding-y-32">
+    <div class="column-12 column-lg-6 display-flex flex-direction-column align-items-center align-items-lg-flex-start">
+      <div class="margin-bottom-32">
+        <amp-img
+          alt="MC Server Logo"
+          src="/images/mc-server-logo.png"
+          width="189.33"
+          height="64"
+        >
+        </amp-img>
+      </div>
+      <div class="">
+        <p class="font-size-14 font-weight-bold margin-bottom-16 text-align-center text-aling-lg-left">Follow us on:</p>
+        <ul class="display-flex color-aqua">
+          <li class=""><a class="margin-x-16" href="{{ site.Data.footer.facebook }}" target="_blank">{{ partial "icons/facebook.html" }}</a></li>
+          <li class=""><a class="margin-x-16" href="{{ site.Data.footer.instagram }}" target="_blank">{{ partial "icons/instagram.html" }}</a></li>
+          <li class=""><a class="margin-x-16" href="{{ site.Data.footer.twitter }}" target="_blank">{{ partial "icons/twitter.html" }}</a></li>
+          <li class=""><a class="margin-x-16" href="{{ site.Data.footer.discord }}" target="_blank">{{ partial "icons/discord.html" }}</a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="column-12 column-lg-6">
+        <div class="display-flex justify-content-center justify-content-lg-flex-end margin-top-32">
+        {{ range site.Data.footer.columns }}
+          <div class="margin-left-32">
+            <h4 class="font-weight-bold">{{ .title }}</h4>
+            <ul class="margin-y-16">
+              {{ range .items }}
+                <li class="margin-y-8"><a class="" href="{{ .link }}">{{ .label }}</a></li>
+              {{ end }}
+            </ul>
+          </div>
+        {{ end }}
+        </div>
+    </div>
+  </div>
   <div class="footer-line"></div>
-  <div class="padding-top-64">
-    {{ site.Params.footer | safeHTML }}
+  <div class="row">
+    <div class="padding-y-16 text-align-center">
+      {{ site.Data.footer.copyright }}
+    </div>
   </div>
 </footer>
